--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mantine/core": "^7.17.2",
     "@mantine/form": "^7.17.2",
     "@mantine/hooks": "^7.17.2",
+    "@tabler/icons-react": "^3.31.0",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
